<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#0e5b8c"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.example.purnota.hoorayzone.RegisterActivity">


    <ImageView
        android:layout_width="180dp"
        android:layout_height="127dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/logo"
        />


    <EditText
        android:id="@+id/username"
        android:layout_height="40dp"
        android:layout_width="190dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="2dp"
        android:drawableLeft="@drawable/ic_contact"
        android:hint="@string/username"
        android:backgroundTint="#111111"
        />


    <EditText
        android:id="@+id/password"
        android:layout_height="40dp"
        android:layout_width="190dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/ic_lock"
        android:hint="@string/password"
        android:backgroundTint="#111111"
        />

    <EditText
        android:id="@+id/password2"
        android:layout_height="40dp"
        android:layout_width="190dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/ic_lock"
        android:hint="@string/confirm_password"
        android:backgroundTint="#111111"
        />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/register"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/already_registered"
            />

        <TextView
            android:id="@+id/textview_login"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:text="@string/loginnew"
            android:textSize="16sp"/>


    </LinearLayout>



</LinearLayout>
