<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_special"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="1dp"
    android:paddingLeft="1dp"
    android:paddingRight="1dp"
    android:paddingTop="1dp"
    tools:context="com.example.purnota.hoorayzone.SpecialActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/offer1"
                android:textSize="20sp"
                android:textStyle="bold"
                />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/offer2"
        android:textSize="20sp"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/offer3"
        android:textSize="20sp"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/offer4"
        android:textSize="20sp"
        android:textStyle="bold"
        />
</LinearLayout>

</LinearLayout>
