<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="2dp"
    android:paddingLeft="2dp"
    android:paddingRight="2dp"
    android:paddingTop="2dp"
    android:background="#0e5b8c"
    android:orientation="vertical"
   android:gravity="center_horizontal"
    tools:context="com.example.purnota.hoorayzone.LoginActivity">

    <ImageView
        android:layout_width="180dp"
        android:layout_height="127dp"
        android:layout_marginTop="50dp"

        app:srcCompat="@drawable/logo"
        />


    <EditText
        android:id="@+id/username"
        android:layout_height="40dp"
        android:layout_width="190dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="2dp"
        android:drawableLeft="@drawable/ic_contact"
        android:hint="@string/username"
        android:backgroundTint="#111111"
        />


    <EditText
        android:id="@+id/password"
        android:layout_height="40dp"
        android:layout_width="190dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/ic_lock"
        android:hint="@string/password"
        android:backgroundTint="#111111"
        />

    <Button
        android:id="@+id/login"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/not_registered"
            />

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:text="@string/register" />


    </LinearLayout>


</LinearLayout>
